--- a/ipad/ReceiptView.xib
+++ b/ipad/ReceiptView.xib
@@ -69,6 +69,10 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
+						<object class="NSCustomResource" key="IBUIHighlightedImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">get-receipt-button-pressed.png</string>
+						</object>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">get-receipt-button.png</string>
@@ -120,6 +124,10 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="1039198519"/>
+						<object class="NSCustomResource" key="IBUIHighlightedImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">pay-button-pressed.png</string>
+						</object>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">pay-button.png</string>
@@ -142,6 +150,10 @@
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="1039198519"/>
+						<object class="NSCustomResource" key="IBUIHighlightedImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">move-button-pressed.png</string>
+						</object>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">move-button.png</string>
@@ -324,7 +336,7 @@
 					<string>MainViewController</string>
 					<string>UIResponder</string>
 					<string>ReceiptView</string>
-					<string>{{533, -20}, {335, 756}}</string>
+					<string>{{533, 0}, {335, 756}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>ReceiptTotalView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -402,11 +414,13 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>category:</string>
+							<string>pageControlValueChanged:</string>
 							<string>pay:</string>
 							<string>sendPaymentRequest:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -417,6 +431,7 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>category:</string>
+							<string>pageControlValueChanged:</string>
 							<string>pay:</string>
 							<string>sendPaymentRequest:</string>
 						</object>
@@ -424,6 +439,10 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBActionInfo">
 								<string key="name">category:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">pageControlValueChanged:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -446,6 +465,7 @@
 							<string>category3</string>
 							<string>category4</string>
 							<string>productsGridView</string>
+							<string>productsPageControl</string>
 							<string>receiptView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -456,6 +476,7 @@
 							<string>UIButton</string>
 							<string>UIButton</string>
 							<string>ButtonGridView</string>
+							<string>UIPageControl</string>
 							<string>ReceiptView</string>
 						</object>
 					</object>
@@ -469,6 +490,7 @@
 							<string>category3</string>
 							<string>category4</string>
 							<string>productsGridView</string>
+							<string>productsPageControl</string>
 							<string>receiptView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -496,6 +518,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">productsGridView</string>
 								<string key="candidateClassName">ButtonGridView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">productsPageControl</string>
+								<string key="candidateClassName">UIPageControl</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">receiptView</string>
@@ -717,6 +743,14 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UIPageControl</string>
+					<string key="superclassName">UIControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIPageControl.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UIResponder</string>
 					<string key="superclassName">NSObject</string>
 					<reference key="sourceIdentifier" ref="1006306733"/>
@@ -830,12 +864,18 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>get-receipt-button-pressed.png</string>
 				<string>get-receipt-button.png</string>
+				<string>move-button-pressed.png</string>
 				<string>move-button.png</string>
+				<string>pay-button-pressed.png</string>
 				<string>pay-button.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>{299, 75}</string>
+				<string>{299, 75}</string>
+				<string>{299, 75}</string>
 				<string>{299, 75}</string>
 				<string>{299, 75}</string>
 				<string>{299, 75}</string>
